# hermes-rs

./: .env.dev  Cargo.toml  README.md  docker-compose.yaml  docker-dependency.yml
.sqlx/: query-2bb41b27311e37d97e88c9f1895861c6f19f7a3a9d50e0cbe5f9c840266a3cb9.json  query-2ecd4d0fbcb9387bc0e85d35457f322fb21b32eb847aa70d0ec8ecdbefb4e6fb.json  query-39e6ad71d2f3b20b761a2b37d8c1cef50a005617a52fbee1f2e7d3c3a14adf8a.json  query-4f564bee05ee217c50a3b225f1733281eb628faaf5d0061f08833d20c30db7aa.json  query-561022cfa1287f619da37fa46364c9351efff6dd97f9ce0a83f791602062f68b.json  query-7b75f2d58317bc34ca82411dcc9f79ef1943a5e5e6469164350edef5d7d99ed3.json  query-891925b91eaccb0f6b696ae443e867a9dcd78add4e3cac9b4c6af850a368e11c.json  query-8c48df0ea254eea0edd2b497ee645a74ea315069cb48d6091c8359c478a783de.json  query-9a8ad51395965f84f24a568e3c10e38b4f3eccbd565617a7d730d139d4dad319.json  query-ae2aa873c0d679f505f3ffd083bc72a47fa2889b22e49f9d82626eeb56b15694.json  query-b23c80e76c640757ff75d80786ce78c4948079b8c6f67ac46317a745d60defa1.json  query-dcf751a573de21ddc124e5226abe80c476844ea1f181e5f5bbf9f585802c00c8.json
config/: test.yaml
migrations/: 20250402070423_create_users_table.up.sql
src/: main.rs
src/adapter/driven/storage/db/repository/: user.rs
src/adapter/driven/storage/memory/: mod.rs  redis_connection.rs
src/adapter/driven/storage/memory/repository/: user.rs
src/adapter/driving/presentation/http/: describe.rs  mod.rs  route.rs  router.rs
src/adapter/driving/presentation/http/handler/: mod.rs
src/adapter/driving/presentation/http/handler/_default/: fallback_handler.rs  health_check_handler.rs
src/adapter/driving/presentation/http/handler/auth/: login.rs  me.rs  register.rs
src/adapter/driving/presentation/http/middleware/: auth.rs
src/core/application/usecase/: app_context.rs  mod.rs
src/core/application/usecase/auth/: error.rs  jwt.rs  service.rs
src/core/application/usecase/user/: error.rs  mod.rs  service.rs
src/core/domain/entity/: user.rs
src/core/domain/valueobject/: mod.rs
src/core/port/: user.rs
src/shared/config/: config.rs  environment.rs
src/shared/logger/: logger.rs
src/shared/worker/: service.rs
src/shared/worker/mailer/: email_sender.rs  service.rs
src/shared/worker/mailer/auth/: service.rs
