[package]
name = "message"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async & Concurrency
tokio = { version = "1.44.1", features = ["full"] }
async-trait = "0.1.81"
bb8 = { version = "0.9.0" }

# Web & Networking
axum = { version = "0.8.1" }
axum-server = { version = "0.7.2" }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower = { version = "0.5.2" }
tower-cookies = { version = "0.11.0" }
socketioxide = { version = "0.16.2" }
http = "1.1.0"

# Database
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }

# Serialization & Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["default"] }
serde_yaml = "0.9"
serde_derive = { version = "1.0.219" }
serde_variant = { version = "0.1.3" }
erased-serde = "0.4.6"

# Logging & Tracing
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# Time & UUID
chrono = { version = "0.4.40", features = ["serde"] }
time = "0.3.41"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

# Security & Hashing
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
argonautica = { version = "0.2.0" }

# Error Handling
anyhow = "1.0.97"
thiserror = { version = "2.0.12" }

# Validation
validator = { version = "0.18.1", features = ["derive"] }

# Environment & Configuration
dotenvy = { version = "0.15.7" }
include_dir = "0.7.4"

# Miscellaneous
lazy_static = "1.5.0"
tera = "1.20.0"
lettre = { version = "0.11.4", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1-rustls-tls",
] }
rusty-sidekiq = { version = "0.13.2", default-features = false }
